<resources>
    <string name="app_name">AiLife</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="act_work">工作</string>
    <string name="bluetooth">蓝牙</string>
    <string name="cancel">取消</string>
    <string name="douban">豆瓣</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">邮件</string>
    <string name="evernote">印象笔记</string>
    <string name="facebook">Facebook</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="finish">完成</string>
    <string name="flickr">Flickr</string>
    <string name="foursquare">FourSquare</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapaper_pwd">密码</string>
    <string name="kaixin">开心网</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="laiwang">来往</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="line">Line</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="linkedin">领英</string>
    <string name="list_friends">%s的朋友</string>
    <string name="mingdao">明道</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="multi_share">图文分享</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="pay">爱今天是一款免费软件，并将继续免费，我们的理念是将免费做得比收费还要好，更好地为您服务。您提供的资金将全部用来发展爱今天，感谢您的支持！</string>
    <string name="pinterest">Pinterest</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="pocket">Pocket</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="qq">QQ</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qzone">QQ空间</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="renren">人人网</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="share">分享</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_completed">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_to">分享到</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="shortmessage">信息</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="str_About">关于</string>
    <string name="str_About_itodayss">爱今天</string>
    <string name="str_Add_your_name">添加名字</string>
    <string name="str_Congratulations_you_are_at_the_top">恭喜，您本周评价处于最顶级--学魔级！</string>
    <string name="str_Day">天</string>
    <string name="str_FeedBack">反馈</string>
    <string name="str_Fri">周五</string>
    <string name="str_Globally">全局</string>
    <string name="str_Housework">家务</string>
    <string name="str_LED">LED</string>
    <string name="str_Mon">周一</string>
    <string name="str_Morning_voice">晨音</string>
    <string name="str_Rest">休息</string>
    <string name="str_Routine_short">固定</string>
    <string name="str_Sat">周六</string>
    <string name="str_Sleep_short">睡眠</string>
    <string name="str_Sport">运动</string>
    <string name="str_Sun">周日</string>
    <string name="str_Support">支持</string>
    <string name="str_Thur">周四</string>
    <string name="str_Tues">周二</string>
    <string name="str_Version">版本</string>
    <string name="str_Wed">周三</string>
    <string name="str_Yesterday">昨天</string>
    <string name="str_about">关于</string>
    <string name="str_actual_day">实际每天</string>
    <string name="str_add">添加</string>
    <string name="str_add_goal">+目标</string>
    <string name="str_add_goal2">添加目标</string>
    <string name="str_add_goal_prompt">您还未添加目标，是否去添加目标?</string>
    <string name="str_add_goal_prompt2">您还没有添加目标，是否现在就去添加你的目标？\10提示：添加目标后投资会隐藏，在目标上花费的时间自动归类为投资时间。</string>
    <string name="str_add_history">+记录</string>
    <string name="str_add_label">添加标签</string>
    <string name="str_add_morningVoice">添加晨音</string>
    <string name="str_add_or_modify">添加/修改</string>
    <string name="str_add_success">添加成功！</string>
    <string name="str_add_summarize">添加总结</string>
    <string name="str_add_time_contain_other_items_1">注意：添加时间包含{几个}个其它记录，继续会覆盖其它记录！</string>
    <string name="str_add_time_too_short">添加时间段有点短哦！请修改后再试...</string>
    <string name="str_advance">高级</string>
    <string name="str_another_pw">再输一次密码</string>
    <string name="str_another_pw2">请再输一次确认密码！</string>
    <string name="str_asset_class">资产等级</string>
    <string name="str_auto_backup">自动备份</string>
    <string name="str_auto_backup_close">自动备份关闭!</string>
    <string name="str_auto_backup_open">自动备份开启!</string>
    <string name="str_avg">平均</string>
    <string name="str_back_up_fail">备份失败，请稍候再试或联系开发者反馈问题.</string>
    <string name="str_back_up_fail2">备份出现异常错误！请稍候再试或联系开发者反馈问题.</string>
    <string name="str_back_up_file_no_exist">未检测到备份文件,请先确认SD卡(外部存储)下/itodayss/data_backup文件存在,再进行导入操作。</string>
    <string name="str_back_up_path">备份路径：SD卡下</string>
    <string name="str_back_up_path2">备份路径：</string>
    <string name="str_back_up_success">备份成功！</string>
    <string name="str_backing_up">备份中,请稍候...</string>
    <string name="str_backing_up2">系统正在备份数据,请稍候再进行其它操作...</string>
    <string name="str_backup">备份</string>
    <string name="str_backup_crypt_change_prompt">尊敬的用户，因优化备份数据方式及算法，会导致旧数据备份数据无法使用，在此通知您进行数据备份，覆盖旧数据，以免数据丢失。点击\'确定\'将在后台自动备份。</string>
    <string name="str_backup_file_instrution">(data_backup文件是备份时产生的数据文件)</string>
    <string name="str_backup_instruction">备份功能将支持 完全离线 使用本软件！即使进行刷机、更换手机等其它需重装爱今天操作，只要有备份数据，也可找回之前的数据，非常实用！\10\10提示：自动备份开启后，会在每天22:10进行备份，主要是为是防止意外删除软件，导致数据丢失！关闭爱今天自启动会导致自动备份不能用，请悉知！\10另外备份数据已加密，请勿对其进行修改，否则会导致数据不可用！</string>
    <string name="str_backup_success_prompt">数据备份成功！\10数据保存在SD卡下/itodayss/data_backup文件中，供导入数据时使用。\10提示：\101,(重要)因部分手机存在兼容问题，在进行卸载‘爱今天’等会删除数据的操作之前，建议您先测试data_backup文件在新手机上是否能成功导入，若无法成功导入，可在反馈页面进行反馈。\102，data_backup已加密，请勿对其进行修改，否则会导致数据不可用！</string>
    <string name="str_backup_to_sd">备份数据到sd卡</string>
    <string name="str_belong_to">属于</string>
    <string name="str_big_goal">大目标</string>
    <string name="str_cancel">取消</string>
    <string name="str_cant_connect_server">无法连接到服务器，请稍候再试...</string>
    <string name="str_change_type">更改类型</string>
    <string name="str_check_for_updates">更新</string>
    <string name="str_choose">选择</string>
    <string name="str_choose_big_goal">选择大目标</string>
    <string name="str_choose_color">选择颜色(只做标识用)</string>
    <string name="str_choose_interval">选择间隔</string>
    <string name="str_choose_type">选择类型</string>
    <string name="str_class_over_ring">休息铃响</string>
    <string name="str_class_start_ring">学习铃响</string>
    <string name="str_click_to_select">点击选择</string>
    <string name="str_close">关闭</string>
    <string name="str_close_start_counter_shake">关闭启动计时震动</string>
    <string name="str_color">颜色</string>
    <string name="str_confirm_finished">完成</string>
    <string name="str_contain">包含</string>
    <string name="str_copy_failure">复制失败，请稍候再试！</string>
    <string name="str_correction_everyday_info">修正每天：为了计划进度稳定达成预期，往后每天需要投入的时间，这个值根据您实际投入动态计算。比如：2.1h修正每天，表示从今天开始，如果你每天投入2.1h以上，就可以在期限日期前完成目标。</string>
    <string name="str_correction_ratio_info">修正率指修正每天与预计每天投入的差值的百分比，简单说是: 修正后每天需要投入 比 预计每天的投入 多了多少或少了多少，如果为负数表为修正每天投入低于预计每天投入，值越大说明前期投入越多，是好事，如果为正数表为修正每天投入大于预计每天投入，值越大表示往后要投入的时间更多。</string>
    <string name="str_create_date">创　　建：</string>
    <string name="str_current_version">当前版本：</string>
    <string name="str_curve_bar_graph">曲线时间(上)　柱状时间(下)</string>
    <string name="str_day">天</string>
    <string name="str_db_file_no_exist">无法获取数据文件，请稍候再试或联系开发者反馈问题.</string>
    <string name="str_deadLine">期限</string>
    <string name="str_deadline_date">期　　限：</string>
    <string name="str_deadline_not_null">您还没设置期限哦,设置期限可让目标更清晰！</string>
    <string name="str_dealine_must_later_now">期限应是今天往后的时间哦！</string>
    <string name="str_default">默认</string>
    <string name="str_default_all_use">默认(共用)</string>
    <string name="str_delay">延后</string>
    <string name="str_delete">删除</string>
    <string name="str_delete_success">删除成功！</string>
    <string name="str_deleted">已删除</string>
    <string name="str_filter">过滤</string>
    <string name="str_first_day_of_week">每周开始日</string>
    <string name="str_general">常用</string>
    <string name="str_goal">目标</string>
    <string name="str_goal_bias_over_50_prompt">您的目标已经偏离超过50%，进度大幅落后，您可以考虑重新设定每日需要时间，或者重置开始时间，也可以投入更多的时间来追赶进度。</string>
    <string name="str_goal_correction">目标修正</string>
    <string name="str_goal_correction_bias_ratio">偏离率</string>
    <string name="str_goal_correction_everyday">修正每天</string>
    <string name="str_goal_correction_info">往后每天需要投入：</string>
    <string name="str_invest">投资</string>
    <string name="str_moning_voice_prompt">晨音导语</string>
    <string name="str_need_effort">加倍努力</string>
    <string name="str_records">记录</string>
    <string name="str_reset">重置</string>
    <string name="str_reset_remaaining_times">重置可重新设定开始时间为今天。</string>
    <string name="str_routine">固定</string>
    <string name="str_simple">简单</string>
    <string name="str_sleep">睡眠</string>
    <string name="str_start_counter_ring">启动计时声音</string>
    <string name="str_start_counter_shake">启动计时震动</string>
    <string name="str_status_bar">状态栏</string>
    <string name="str_summarize_prompt">总结导语</string>
    <string name="str_to_goal">距目标</string>
    <string name="str_update_ui_interval">更新部件间隔</string>
    <string name="str_waste">浪费</string>
    <string name="str_count_down_start_time">主页倒计时开始时间</string>
    <string name="str_current_cache">当前缓存：0K</string>
    <string name="str_goal_list_number_type">目标列表数据类型</string>
    <string name="str_language">语言</string>
    <string name="str_noti_items_number">状态栏目标个数</string>
</resources>