<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:dslv="http://schemas.android.com/apk/res/com.record.myLife" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@+id/rl_goal_correction_title" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/black_tran_es" android:gravity="left" android:id="@+id/tv_goal_correction_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_goal_correction" android:layout_centerVertical="true"/>
        <TextView android:textSize="12sp" android:textColor="@color/black_tran_es" android:gravity="center" android:id="@+id/tv_goal_correction_advance" android:background="@drawable/x_white_bg_black_frame" android:layout_width="60dp" android:layout_height="25dp" android:layout_marginRight="10dp" android:text="@string/str_advance" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_goal_correction_simple" android:background="@drawable/x_blue_bg_black_frame" android:layout_width="60dp" android:layout_height="25dp" android:text="@string/str_simple" android:layout_toLeftOf="@+id/tv_goal_correction_advance" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:id="@+id/v_goal_correction_line" android:background="@color/black_tran_es" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_below="@+id/rl_goal_correction_title"/>
    <TextView android:textColor="@color/black_tran_es" android:gravity="center_vertical" android:id="@+id/tv_goal_correction_info" android:background="@color/white" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="5dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_goal_correction_info" android:layout_below="@+id/v_goal_correction_line"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_goal_correction_inner" android:background="@color/white" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="60dp" android:layout_below="@+id/tv_goal_correction_info">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_goal_correction__hours" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:gravity="center" android:id="@+id/tv_goal_correction__hours" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="7.8h"/>
            <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_goal_correction_everyday"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_goal_correction_correction_ratio" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:gravity="center" android:id="@+id/tv_goal_correction_correction_ratio" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="18%"/>
            <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_need_effort"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_goal_correction_bias_ratio" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:gravity="center" android:id="@+id/tv_goal_correction_bias_ratio" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="-36%"/>
            <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_goal_correction_bias_ratio"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:gravity="center" android:id="@+id/tv_goal_correction_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:minWidth="35dp" android:text="07DAYS"/>
            <TextView android:gravity="center" android:id="@+id/tv_goal_need_hours2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_to_goal"/>
        </LinearLayout>
    </LinearLayout>
    <View android:id="@+id/v_goal_correction_line2" android:background="@color/black_tran_es" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_below="@+id/ll_goal_correction_inner"/>
    <RelativeLayout android:id="@+id/rl_goal_correction_reset" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/v_goal_correction_line2">
        <Button android:textColor="@color/black_tran_es" android:id="@+id/btn_tem_goal_reset" android:background="@drawable/sel_white2half_frame" android:layout_width="50dp" android:layout_height="50dp" android:scaleType="center" android:text="@string/str_reset" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <TextView android:textColor="@color/black_tran_es" android:gravity="left" android:id="@+id/tv_goal_correction_prmpt" android:padding="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_goal_bias_over_50_prompt" android:layout_toLeftOf="@+id/btn_tem_goal_reset"/>
        <TextView android:textColor="@color/black_tran_es" android:id="@+id/tv_goal_correction_reset_times" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_reset_remaaining_times" android:layout_toLeftOf="@+id/btn_tem_goal_reset" android:layout_below="@+id/tv_goal_correction_prmpt"/>
    </RelativeLayout>
</RelativeLayout>
