<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/gray" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/set_rl_f" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:id="@+id/btn_set_back" android:background="@drawable/sel_arrow_gray2black_left" android:layout_width="50dp" android:layout_height="50dp" android:scaleType="center" android:layout_centerVertical="true"/>
        <TextView android:textSize="20sp" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_general" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:id="@+id/v_line_1" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="1px"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@+id/ll_sel" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/set_btn_noti" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1dp" android:text="@string/str_status_bar"/>
                <ImageView android:id="@+id/iv_set_noti" android:layout_width="wrap_content" android:layout_height="@dimen/setting_bar_high" android:layout_marginRight="10dp" android:src="@drawable/ic_on_v2" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_noti_items_number" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:text="@string/str_noti_items_number" android:layout_alignParentRight="true"/>
            <RelativeLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/set_btn_filter" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1dp" android:text="@string/str_filter"/>
                <ImageView android:id="@+id/iv_set_filter" android:layout_width="wrap_content" android:layout_height="@dimen/setting_bar_high" android:layout_marginRight="10dp" android:src="@drawable/ic_on_v2" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/set_btn_counter_sound" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1dp" android:text="@string/str_start_counter_ring"/>
                <ImageView android:id="@+id/iv_set_counter_sound" android:layout_width="wrap_content" android:layout_height="@dimen/setting_bar_high" android:layout_marginRight="10dp" android:src="@drawable/ic_on_v2" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/set_btn_counter_shake" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1dp" android:text="@string/str_start_counter_shake"/>
                <ImageView android:id="@+id/iv_set_counter_shake" android:layout_width="wrap_content" android:layout_height="@dimen/setting_bar_high" android:layout_marginRight="10dp" android:src="@drawable/ic_on_v2" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_update_ui_interval" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="10dp" android:text="@string/str_update_ui_interval" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_first_day_of_week" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1px" android:text="@string/str_first_day_of_week" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_count_down_start_time" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1px" android:text="@string/str_count_down_start_time" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_upload_net_type" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1px" android:text="登陆后上传数据条件：WIFI" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_language" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="@dimen/setting_bar_high" android:layout_marginTop="1px" android:text="@string/str_language" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_general_goal_list_type" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="1px" android:text="@string/str_goal_list_number_type" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_cache" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/str_current_cache" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_summarize" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/str_summarize_prompt" android:layout_alignParentRight="true"/>
            <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/btn_set_morning" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/str_moning_voice_prompt" android:layout_alignParentRight="true"/>
            <RelativeLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:textSize="15sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@+id/set_btn_backup" android:background="@drawable/sel_white2blue" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="1dp" android:text="@string/str_backup"/>
                <ImageView android:id="@+id/iv_set_remind_right_3" android:layout_width="10dp" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="@drawable/ic_right_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
                <ImageView android:id="@+id/iv_set_had_backup_dot" android:layout_width="10dp" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:src="@drawable/ic_red_dot" android:layout_toLeftOf="@+id/iv_set_remind_right_3" android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
